tests/ui/expected_non_static_method.stderr
error: custom attribute panicked
  --> $DIR/expected_non_static_method.rs:15:1
   |
15 | #[use_ast]
   | ^^^^^^^^^^
   |
   = help: message: Expected non-static method, found method with 0 arguments. Consider moving this function to another impl block.
